[metadata]
name = whitesymex
version = attr: whitesymex.__version__
author = Umut Barış Öztunç
author_email = umutoztunc@gmail.com
description = Symbolic execution engine for Whitespace language.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/umutoztunc/whitesymex
license = MIT License
license_files = LICENSE
classifiers =
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    z3-solver
python_requires = >=3.7

[options.entry_points]
console_scripts =
    whitesymex = whitesymex.cli:main
